# Pyphen

./: .gitignore  .travis.yml  CNAME  COPYING  COPYING.MPL  MANIFEST  MANIFEST.in  README  README.md  README.rst  __init__.py  _config.yml  hyphenator.py  index.md  pyphen.py  pyproject.toml  setup.py  test.py  tox.ini
.github/workflows/: tests.yml
_layouts/: default.html
css/: main.scss
dictionaries/: hyph_af.dic  hyph_bg.dic  hyph_cs.dic  hyph_et.dic  hyph_he.dic  hyph_hu.dic  hyph_lt.dic  hyph_lv.dic  hyph_nb.dic  hyph_nn.dic  hyph_pl.dic  hyph_ro_RO.dic  hyph_sl.dic  hyph_te.dic  hyph_uk.dic  update.sh
docs/: api_reference.rst  changelog.rst  common_use_cases.rst  conf.py  contribute.rst  first_steps.rst  going_further.rst  index.rst  support.rst
pyphen/: __init__.py  __init__.pyi
pyphen/dictionaries/: README_hyph_NO.txt  README_hyph_de.txt  README_hyph_el_GR.txt  README_hyph_eu.txt  README_hyph_it_IT.txt  README_hyph_pt_PT.txt  README_hyph_uk_UA.txt  hyph_da.dic  hyph_el.dic  hyph_hr.dic  hyph_it.dic  hyph_mn_MN.dic  hyph_nl.dic  hyph_pt.dic  hyph_pt_Latn_BR.dic  hyph_ro.dic  hyph_ru.dic  hyph_sa_IN.dic  hyph_sk.dic  hyph_zu.dic  update.sh
tests/: test_pyphen.py
