[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'pyphen'
description = 'Pure Python module to hyphenate text'
keywords = ['hyphenation']
authors = [{name = 'Guillaume Ayoub', email = 'contact@courtbouillon.org'}]
maintainers = [{name = 'CourtBouillon', email = 'contact@courtbouillon.org'}]
requires-python = '>=3.7'
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {file = 'LICENSE'}
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)',
  'License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)',
  'License :: OSI Approved :: Mozilla Public License 1.1 (MPL 1.1)',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Text Processing',
  'Topic :: Text Processing :: Linguistic',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://www.courtbouillon.org/pyphen'
Documentation = 'https://pyphen.org/'
Code = 'https://github.com/Kozea/Pyphen'
Issues = 'https://github.com/Kozea/Pyphen/issues'
Changelog = 'https://github.com/Kozea/Pyphen/releases'
Donation = 'https://opencollective.com/courtbouillon'

[project.optional-dependencies]
doc = ['sphinx', 'sphinx_rtd_theme']
# TODO: remove the flake8 dependency when https://github.com/tholo/pytest-flake8/issues/87 is fixed
test = ['pytest', 'pytest-xdist', 'pytest-flake8', 'pytest-isort', 'pytest-cov', 'coverage[toml]', 'flake8 <5']

[tool.flit.sdist]
exclude = ['.*']

[tool.pytest.ini_options]
addopts = '--isort --flake8 --numprocesses=auto'

[tool.coverage.run]
branch = true
include = ['tests/*', 'pyphen/*']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'def __repr__', 'raise NotImplementedError']
omit = ['.*']

[tool.isort]
default_section = 'FIRSTPARTY'
multi_line_output = 4
